[package]
name = "unirand"
version = "0.1.2"
authors = ["R Neale mathsDOTearth"]
edition = "2021"
description = "A Marsaglia's universal random number generator."
license = "MIT"
repository = "https://github.com/mathsDOTearth/unirand"
documentation = "https://docs.rs/unirand"
readme = "README.md"
keywords = ["random", "rng", "marsaglia", "uniform", "randomnumber"]
categories = ["algorithms", "science", "mathematics"]

[dependencies]

